src/tests/snapshots/synoik__tests__window_opening__check_target_size@omT-dhF500-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\ndefault window height: F500\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 1240 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 500, bounds: 1240 × 680, states: [Activated]
